# igrep-cashbook

./: .gitignore  .gitmodules  LICENSE  README.md
cs/SumIgrepCashbook/: SumIgrepCashbook.sln
cs/SumIgrepCashbook/SumIgrepCashbook/: CashBookItem.cs  Sum.cs  SumIgrepCashbook.csproj
cs/SumIgrepCashbook/SumIgrepCashbook/Properties/: AssemblyInfo.cs
elm/: .gitignore  15-06.txt  15-13.txt  build.sh  elm-package.json  package.json  sum.html  webpack.config.js
elm/app/: index.css
elm/src/: Main.elm  index.js
elm/src/IgrepCashbook/: App.elm  File.elm  FileList.elm  Line.elm  PathList.elm  Summary.elm  UrlHandler.elm
elm/src/Result/: Extra.elm
elm/test/: Test.elm  TestRunner.elm  Tests.elm
elm/tests/: Tests.elm  elm-package.json
hs/: .exrc  IgrepCashbook.hs  IgrepCashbook2.hs  LICENSE  Rakefile  SumCashbook.hs  convert-to-cashbook2.hs  igrep-cashbook.cabal  sum.hs
hs2/: .gitignore  ChangeLog.md  README.md  ahc-cabal.project  build-asterius.sh  igrep-cashbook.cabal  package.yaml  stack.yaml
hs2/app/: Main.hs
hs2/src/: IgrepCashbook.hs
hs2/src/Control/: Foldl.hs
hs2/src/Data/Map/Monoidal/: Strict.hs
hs2/test/: Spec.hs
hs2/wasm/: Main.hs
py-sl4a/: .exrc  install.sh  sum-money.py  sum-money2.py
rb/: igrep-cashbook.rb  sum
rs/: Cargo.toml
rs/example/: 15-08.txt  15-13.txt
rs/src/: lib.rs  main.rs
sample/: sample.txt  sample2.txt
