cabal-version: 2.2

name:           igrep-cashbook
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/igrep/igrep-cashbook#readme>
homepage:       https://github.com/igrep/igrep-cashbook#readme
bug-reports:    https://github.com/igrep/igrep-cashbook/issues
author:         Yuji Yamamoto
maintainer:     whosekiteneverfly@gmail.com
copyright:      2017 Yuji Yamamoto
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/igrep/igrep-cashbook

common very-common
  build-depends:
      base >= 4.7 && < 5
    , text

common common
  build-depends:
      containers
    , megaparsec >= 7
    , parser-combinators

flag asterius
  description: Enable this when building with ahc-cabal.
  default:     False
  manual:      True

library
  import: very-common, common
  exposed-modules:
      IgrepCashbook
    , Control.Foldl
  other-modules:
      Data.Map.Monoidal.Strict
  hs-source-dirs:
      src
  default-language: Haskell2010

executable sum
  import: very-common
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , igrep-cashbook
  default-language: Haskell2010

  if flag(asterius)
    hs-source-dirs: wasm
    ld-options:     -optl--export-function=sumIgrepCashbook
  else
    hs-source-dirs: app

test-suite igrep-cashbook-test
  import: very-common, common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      igrep-cashbook
    , QuickCheck
    , fakefs
    , hspec
    , hspec-megaparsec
  default-language: Haskell2010

  if flag(asterius)
    buildable: False
